refactor(jpa): 移除批量操作超时功能并简化文档
- 从 AbstractBulkOperationSpec 移除 QueryTimeoutHelper 依赖
- 删除 applyTimeout 方法及其实现
- 简化 AGENTS.md 文档内容，移除详细的技术说明
- 删除 AuditEntityListener 及其相关测试类
- 移除审计相关的实体监听器功能